# Mobile-Lift-Arm-Robot

./: README.md  control.sh  run.sh  test_build.sh
src/: package.xml  setup.py
src/mobile_lift_arm/: CMakeLists.txt  __init__.py  controller.py  gui.py  package.xml  scissor_lift_gui.py  setup.py
src/mobile_lift_arm/backup/: mobile_lift_arm.urdf.xacro  ros2_controllers.yaml  sim.launch_v1.py
src/mobile_lift_arm/config/: ros2_controllers.yaml  scissor_lift_controller.py  scissor_lift_controllers.yaml
src/mobile_lift_arm/launch/: scissor_lift.launch.py  sim.launch.py
src/mobile_lift_arm/urdf/: base_vehicle.xacro  mobile_lift_arm.urdf.xacro  mobile_lift_robot.urdf.xacro  robot_arm.xacro  robot_arm_6dof_wrapper.xacro  scissor_lift.urdf.xacro  scissor_lift.xacro  scissor_lift_macros.xacro
src/scissor_lift_description/: CMakeLists.txt  package.xml
src/scissor_lift_description/config/: scissor_lift_controllers.yaml
src/scissor_lift_description/launch/: display.launch.py  gazebo.launch.py
src/scissor_lift_description/urdf/: scissor_lift.urdf.xacro  scissor_lift_macros.xacro
